<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.lastExercise.TaskActivity"
    android:orientation="vertical"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"/>
        <Button
            android:id="@+id/buttonListUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_user"
            android:layout_below="@+id/buttonAdd"/>
        <RadioGroup
            android:id="@+id/radioGroupFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true">
            <RadioButton
                android:id="@+id/radioButtonAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"/>
            <RadioButton
                android:id="@+id/radioButtonCompleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed"/>
            <RadioButton
                android:id="@+id/radioButtonUncompleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uncompleted"/>
        </RadioGroup>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_task"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRFLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>