<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.lastExercise.DetailTaskActivity"
    android:orientation="vertical"
    android:layout_marginStart="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completed"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <CheckBox
        android:id="@+id/checkBoxStt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assigned_to"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/textAssignTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/unassigned"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assign_task"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">
    </Spinner>

</LinearLayout>